--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="#">Menu 1</a></li>
         <li><a href="#">Menu 2</a></li>
-        <li><a href="#">Menu 3</a></li>
+        <li><a href="#">Menu Updatering</a></li>
       </ul>
     </nav>
     <main>
